Fixed side position after collapse

--- a/client/modules/treo-core/css/treo/treo-light-theme.css
+++ b/client/modules/treo-core/css/treo/treo-light-theme.css
@@ -17559,6 +17559,7 @@ table.table {
 .record .stick-sub.button-container {
   background-color: #ececec !important;
   padding-bottom: 0;
+  z-index: 101;
 }
 
 .record .button-container > .btn-group,
